# myrecorder

./: .gitignore  readme.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/martin/mytranvice/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: mp3converter.cpp  native-lib.cpp
app/src/main/java/com/example/martin/mytranvice/: MainActivity.java  Mp3Converter.java  Myapplication.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/martin/mytranvice/: ExampleUnitTest.java
simplerecorder/: build.gradle
simplerecorder/src/main/: AndroidManifest.xml
simplerecorder/src/main/java/demo/martin/simplerecorder/: AudioBufferSave.java  BytesTransUtil.java  CoreManagerBuffer.java  CoreRecorder.java  CoreRecorderManager.java  ManagerInterface.java  MyLog.java
simplerecorder/src/main/res/values/: strings.xml
